[package]
name = "aoc_2022"
description = "Advent of Code 2022 solved with Rust for learning purposes"
author = "Carlos de la Orden (github: cdelaorden)"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
